2011-06-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_messages.php
	include/functions_config.php
	extensions/dbmanager.php
	operation/users/user_edit.php
	operation/messages/message.php
	images/skin/skin_default/include/styles/pandora.css
	general/header.php
	godmode/agentes/module_manager_editor.php
	godmode/menu.php
	godmode/users/user_list.php
	godmode/users/configure_user.php
	godmode/users/configure_profile.php: Messages and alert sections in
	header are now dropable and resizable. 
	
	* images/profiles.png: Added profile image

	* godmode/users/profile_list.php_ Added new manage profiles section

2011-06-29  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_snmp_trap_types.php
	include/help/es/help_snmp_trap_types.php
	include/functions_snmp.php
	operation/snmpconsole/snmp_view.php: Added snmp trap generator
	in the snmpview

2011-06-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	operation/agentes/status_events.php
	general/pandora_help.php
	general/logon_ok.php: Css style improvements.

2011-06-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	images/skin/skin_default/include/styles/pandora.css: Modifications
	over css styles.

2011-06-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/module_groups/brick.png
	images/skin/skin_default/images/agents_group.png
	images/skin/skin_default/images/note.png
	images/skin/skin_default/images/os_icons/android_small.png: Added 
	new icons.
	
	* include/styles/pandora.css
	include/functions_ui.php
	extensions/insert_data.php
	extensions/system_info.php
	extensions/pandora_logs.php
	extensions/agents_modules.php
	extensions/resource_registration.php
	extensions/resource_exportation.php
	extensions/module_groups.php
	extensions/update_manager/main.php
	extensions/plugin_registration.php
	operation/extensions.php
	operation/visual_console/render_view.php