@@ -1,3 +1,7 @@
+2011-06-30  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_snmp_trap_types.php: Added a new help file.
+
 2011-06-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/functions_messages.php
